--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8090
 spring.application.name= employeepayroll
 spring.profiles.active= dev
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/payroll_service
 spring.datasource.username=root
 spring.datasource.password=Aakash@123
